--- a/execution-environment/requirements.yml
+++ b/execution-environment/requirements.yml
@@ -3,5 +3,5 @@ collections:
   - name: cloud.terraform
     source: https://github.com/ansible-collections/cloud.terraform.git
     type: git
-    version: stable-statefile-inventory
+    version: main
   - name: google.cloud
